# teracoja

./: .gitignore  1.teracoja.js  Cargo.toml  README.md  bootstrap.js  index.html  package-lock.json  package.json  postcss.config.js  styles.css  tailwind.config.js  teracoja.js  teracoja.wasm  webpack.config.js
.github/workflows/: hoge.yml  rust.yml
src/: app_router.rs  lib.rs  router.rs
src/components/: counter.rs
src/pages/: home.rs  mod.rs  order.rs  order_list.rs
static/: index.html  package.json  styles.css  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
